kubernetes/apps/mend-renovate/mend-renovate/app/httproute.yaml
---
# yaml-language-server: $schema=https://datreeio.github.io/CRDs-catalog/gateway.networking.k8s.io/httproute_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: mend-renovate
spec:
  parentRefs:
    - name: envoy-external
      namespace: mend-renovate
      sectionName: https
  hostnames: ["renovate.${SECRET_DOMAIN}"]
  rules:
    - backendRefs:
        - name: mend-renovate
          port: 80
